--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,12 @@ repositories {
 
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 28
         buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "net.afterday.compas"
         minSdkVersion 18
-        targetSdkVersion 19
+        targetSdkVersion 28
         versionCode 1813
         versionName "1813"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -48,12 +48,13 @@ dependencies {
     })
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-    implementation 'com.google.code.gson:gson:2.8.4'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.android.support:percent:25.3.1'
-    implementation 'com.android.support:recyclerview-v7:25.3.1'
-    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:percent:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'net.sourceforge.streamsupport:streamsupport:1.5.3'
