--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.Manifest.permission.NETWORK_SETTINGS" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <uses-feature android:name="android.hardware.location.gps"/>
     <application
@@ -56,6 +60,7 @@
                 <action android:name="ServiceControlls"></action>
             </intent-filter>
         </receiver>
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/ic_notification" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
