--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="PDA Compass v.1813 GM"
+        android:label="PDA Compass v.1906 a1"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -34,7 +34,7 @@
         android:permission="">
         <activity android:name="net.afterday.compas.app.MainActivity"
             android:configChanges="keyboardHidden|screenSize"
-            android:label="PDA Compass v.1813 GM">
+            android:label="PDA Compass v.1906 a1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
